<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:layout_marginBottom="1dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/restaurant_list_image"
        android:layout_width="@dimen/image_padding"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/bottom_padding"
        android:paddingStart="@dimen/left_padding"
        android:paddingEnd="@dimen/right_padding"
        android:paddingTop="@dimen/top_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/restaurant_list_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:text="@string/restaurant_name" />

                <TextView
                    android:id="@+id/restaurant_list_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_desc" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/restaurant_list_delivery_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/restaurant_cost" />

            <TextView
                android:id="@+id/restaurant_list_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:text="@string/open_still" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>