<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_details_error_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"
            android:visibility="gone"
            tools:text="Something bad happened :(" />

        <TextView
            android:id="@+id/restaurant_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold"
            android:text="@string/restaurant_name" />

        <TextView
            android:id="@+id/restaurant_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:text="@string/restaurant_type" />

        <TextView
            android:id="@+id/restaurant_details_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding"
            android:paddingTop="@dimen/padding"
            android:text="@string/review_ratings" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/padding"
            android:paddingTop="@dimen/padding">

            <TextView
                android:id="@+id/restaurant_details_delivery_fee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/delivery_cost" />

            <TextView
                android:id="@+id/restaurant_details_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/arriving_minutes" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>